# naja-scope

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  MANIFEST.in  NAJAEDA_NOTES.md  README.md  README_PyPI.md  SECURITY.md  glama.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  cva6-demo.yml  publish.yml
docs/: identity-and-addressing.md  naja-doc-suggestion-identity.md  naja-feature-request-NLID-python-class.md  naja-feature-request-SNLLogicalCone.md  naja-feature-request-occurrence-getInstance.md  naja-feature-request-slang-coupling.md  naja-feature-request-sv-symbol-path.md  phase2-plan.md
eval/: README.md  RESULTS.md
eval/harness/: designs.py  probe_goldens.py  run_eval.py  score.py  serve.py
eval/questions/: cva6.yaml  uart.yaml
examples/: README.md  _cva6_fetch.sh  counter2.v  cva6_demo.py  cva6_demo.sh  cva6_demo_agent.sh  gate_level.py  stdcells.lib  walkthrough.py
src/naja_scope/: __init__.py  api.py  cards.py  cone.py  connectivity.py  errors.py  intent.py  loader.py  naming.py  paging.py  resolve.py  server.py  session.py  snl.py  source_index.py
tests/: conftest.py  test_connectivity.py  test_examples_gate_level.py  test_examples_walkthrough.py  test_intent.py  test_naming_and_source.py  test_net_types.py  test_resolve.py  test_sv_load_errors.py  test_sync_reset.py  test_tools.py  test_zz_snapshot.py  test_zzz_cone_cva6.py  test_zzz_hierarchy_cva6.py
tests/fixtures/: intent_mini.sv  net_types.sv  sync_reset_mini.sv  uart.sv
