[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "naja-scope"
version = "0.1.0"
description = "Agent-facing MCP query layer over najaeda: navigate elaborated SystemVerilog designs without loading source into context."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    { name = "naja authors", email = "contact@keplertech.io" },
]
keywords = ["mcp", "systemverilog", "eda", "netlist", "rtl", "najaeda", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "najaeda>=0.7.8",
    "mcp>=1.2",
]

[project.urls]
Homepage = "https://github.com/najaeda/naja-scope"
Repository = "https://github.com/najaeda/naja-scope"
Issues = "https://github.com/najaeda/naja-scope/issues"

# Phase-2 living-intent layer (get_intent) needs NO extra Python dependency: it
# is a thin client over naja's in-engine SNL↔slang link (naja.intent_*), which
# walks the live slang AST in C++ and returns plain data. There is no pyslang
# and no second elaboration. The only requirement is a najaeda build that
# retains the link (keep_ast_link); warm-only. See
# docs/naja-feature-request-slang-coupling.md and DESIGN.md "Phase 2".

[project.scripts]
naja-scope-mcp = "naja_scope.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
